[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -1,2 +1,31 @@
 <html>
+    <head>
+        <title>
+           article one anuantony 
+        </title>
+    </head>
+    <body>
+        <div>
+            <d> href='/'>home</d>
+        </div>
+        <hr/>
+        <h3>
+            article one
+        </h3>
+        <div>
+            sept 2016
+        </div>
+        <div>
+            <p>
+                this is my first articlethis is my first articlethis is my first articlethis is my first article
+            </p>
+            <p>
+                this is my first articlethis is my first articlethis is my first articlethis is my first article
+            </p>
+            <p>
+                this is my first articlethis is my first articlethis is my first articlethis is my first article
+            </p>
+        </div>
+    </body>
 </html>
+
