--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-            <d> href="/">home</d>
+            <d href="/">home</d>
         </div>
         <hr/>
         <h3>
