[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-            <d href="/">home</d>
+            <a href="/">home</a>
         </div>
         <hr/>
         <h3>
